--- a/src/Components/country/country.css
+++ b/src/Components/country/country.css
@@ -6,3 +6,10 @@
     border-radius: 10px;
 
  }
+ .flags-container{
+
+   width: 80px;
+   display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 20px;
+ }
